--- a/docs/examples/MarrmotM01.ipynb
+++ b/docs/examples/MarrmotM01.ipynb
@@ -26,11 +26,13 @@
    "outputs": [],
    "source": [
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "import ewatercycle.forcing\n",
-    "import ewatercycle.models"
+    "import ewatercycle.models\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)"
    ]
   },
   {
@@ -70,13 +72,13 @@
     }
    ],
    "source": [
-    "forcing = ewatercycle.forcing.load_foreign('marrmot',\n",
-    "                        directory='.',\n",
-    "                        start_time='1989-01-01T00:00:00Z',\n",
-    "                        end_time='1992-12-31T00:00:00Z',\n",
-    "                        forcing_info={\n",
-    "                            'forcing_file': 'BMI_testcase_m01_BuffaloRiver_TN_USA.mat'\n",
-    "                        })\n",
+    "forcing = ewatercycle.forcing.load_foreign(\n",
+    "    \"marrmot\",\n",
+    "    directory=\".\",\n",
+    "    start_time=\"1989-01-01T00:00:00Z\",\n",
+    "    end_time=\"1992-12-31T00:00:00Z\",\n",
+    "    forcing_info={\"forcing_file\": \"BMI_testcase_m01_BuffaloRiver_TN_USA.mat\"},\n",
+    ")\n",
     "print(forcing)"
    ]
   },
@@ -144,7 +146,7 @@
     }
    ],
    "source": [
-    "model = ewatercycle.models.MarrmotM01(version='2020.11', forcing=forcing)\n",
+    "model = ewatercycle.models.MarrmotM01(version=\"2020.11\", forcing=forcing)\n",
     "print(model)"
    ]
   },
@@ -200,7 +202,7 @@
    "source": [
     "cfg_file, cfg_dir = model.setup(\n",
     "    maximum_soil_moisture_storage=12.0,\n",
-    "    end_time = \"1989-02-01T00:00:00Z\",\n",
+    "    end_time=\"1989-02-01T00:00:00Z\",\n",
     ")\n",
     "print(cfg_file)\n",
     "print(cfg_dir)"
@@ -345,9 +347,9 @@
     "time_range = []\n",
     "end_time = model.end_time\n",
     "\n",
-    "while (model.time < end_time):\n",
+    "while model.time < end_time:\n",
     "    model.update()\n",
-    "    discharge.append(model.get_value('flux_out_Q')[0])\n",
+    "    discharge.append(model.get_value(\"flux_out_Q\")[0])\n",
     "    time_range.append(model.time_as_datetime.date())\n",
     "    print(model.time_as_isostr)"
    ]
@@ -378,7 +380,7 @@
    "outputs": [],
    "source": [
     "simulated_discharge = pd.DataFrame(\n",
-    "    {'simulation': discharge}, index=pd.to_datetime(time_range)\n",
+    "    {\"simulation\": discharge}, index=pd.to_datetime(time_range)\n",
     ")"
    ]
   },
