--- a/docs/examples/lisflood.ipynb
+++ b/docs/examples/lisflood.ipynb
@@ -26,17 +26,18 @@
    "outputs": [],
    "source": [
     "import logging\n",
-    "logger = logging.getLogger('grpc4bmi')\n",
-    "logger.setLevel(logging.WARNING)\n",
-    "\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
     "\n",
     "import pandas as pd\n",
     "\n",
     "import ewatercycle.forcing\n",
     "import ewatercycle.models\n",
-    "import ewatercycle.parameter_sets"
+    "import ewatercycle.parameter_sets\n",
+    "\n",
+    "logger = logging.getLogger(\"grpc4bmi\")\n",
+    "logger.setLevel(logging.WARNING)\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)"
    ]
   },
   {
@@ -77,18 +78,19 @@
     }
    ],
    "source": [
-    "forcing = ewatercycle.forcing.load_foreign(target_model='lisflood',\n",
-    "                                           directory='/scratch/shared/ewatercycle/lisflood_example/lisflood_forcing_data/',\n",
-    "                                           start_time='1990-01-01T00:00:00Z',\n",
-    "                                           end_time='1990-12-31T00:00:00Z',\n",
-    "                                           forcing_info={\n",
-    "                                               'PrefixPrecipitation': 'lisflood_ERA-Interim_pr_1990_1990.nc',\n",
-    "                                               'PrefixTavg': 'lisflood_ERA-Interim_tas_1990_1990.nc',\n",
-    "                                               'PrefixE0': 'lisflood_e0_1990_1990.nc',\n",
-    "                                               'PrefixES0': 'lisflood_es0_1990_1990.nc',\n",
-    "                                               'PrefixET0': 'lisflood_et0_1990_1990.nc',\n",
-    "                                           }\n",
-    "                                          )\n",
+    "forcing = ewatercycle.forcing.load_foreign(\n",
+    "    target_model=\"lisflood\",\n",
+    "    directory=\"/scratch/shared/ewatercycle/lisflood_example/lisflood_forcing_data/\",\n",
+    "    start_time=\"1990-01-01T00:00:00Z\",\n",
+    "    end_time=\"1990-12-31T00:00:00Z\",\n",
+    "    forcing_info={\n",
+    "        \"PrefixPrecipitation\": \"lisflood_ERA-Interim_pr_1990_1990.nc\",\n",
+    "        \"PrefixTavg\": \"lisflood_ERA-Interim_tas_1990_1990.nc\",\n",
+    "        \"PrefixE0\": \"lisflood_e0_1990_1990.nc\",\n",
+    "        \"PrefixES0\": \"lisflood_es0_1990_1990.nc\",\n",
+    "        \"PrefixET0\": \"lisflood_et0_1990_1990.nc\",\n",
+    "    },\n",
+    ")\n",
     "print(forcing)"
    ]
   },
@@ -137,10 +139,10 @@
    ],
    "source": [
     "parameterset = ewatercycle.parameter_sets.ParameterSet(\n",
-    "    name='Lisflood01degree_masked',\n",
-    "    directory='/projects/0/wtrcycle/comparison/lisflood_input/Lisflood01degree_masked',\n",
-    "    config='/projects/0/wtrcycle/comparison/lisflood_input/settings_templates/settings_lisflood.xml',\n",
-    "    target_model='lisflood'\n",
+    "    name=\"Lisflood01degree_masked\",\n",
+    "    directory=\"/projects/0/wtrcycle/comparison/lisflood_input/Lisflood01degree_masked\",\n",
+    "    config=\"/projects/0/wtrcycle/comparison/lisflood_input/settings_templates/settings_lisflood.xml\",\n",
+    "    target_model=\"lisflood\",\n",
     ")\n",
     "print(parameterset)"
    ]
@@ -225,7 +227,9 @@
     }
    ],
    "source": [
-    "model = ewatercycle.models.Lisflood(version='20.10', parameter_set=parameterset, forcing=forcing)\n",
+    "model = ewatercycle.models.Lisflood(\n",
+    "    version=\"20.10\", parameter_set=parameterset, forcing=forcing\n",
+    ")\n",
     "print(model)"
    ]
   },
@@ -278,11 +282,13 @@
     }
    ],
    "source": [
-    "model_mask = '/projects/0/wtrcycle/comparison/recipes_auxiliary_datasets/LISFLOOD/model_mask.nc'\n",
+    "model_mask = (\n",
+    "    \"/projects/0/wtrcycle/comparison/recipes_auxiliary_datasets/LISFLOOD/model_mask.nc\"\n",
+    ")\n",
     "\n",
-    "config_file, config_dir = model.setup(IrrigationEfficiency='0.8', \n",
-    "                                      end_time='1990-1-31T00:00:00Z',\n",
-    "                                      MaskMap=model_mask)\n",
+    "config_file, config_dir = model.setup(\n",
+    "    IrrigationEfficiency=\"0.8\", end_time=\"1990-1-31T00:00:00Z\", MaskMap=model_mask\n",
+    ")\n",
     "print(config_file)\n",
     "print(config_dir)"
    ]
@@ -425,9 +431,13 @@
     "time_range = []\n",
     "end_time = model.end_time\n",
     "\n",
-    "while (model.time < end_time):\n",
+    "while model.time < end_time:\n",
     "    model.update()\n",
-    "    target_discharge.append(model.get_value_at_coords('Discharge', lon=target_longitude, lat=target_latitude)[0])\n",
+    "    target_discharge.append(\n",
+    "        model.get_value_at_coords(\n",
+    "            \"Discharge\", lon=target_longitude, lat=target_latitude\n",
+    "        )[0]\n",
+    "    )\n",
     "    time_range.append(model.time_as_datetime.date())\n",
     "    print(model.time_as_isostr)"
    ]
@@ -447,7 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "discharge = model.get_value_as_xarray('Discharge')"
+    "discharge = model.get_value_as_xarray(\"Discharge\")"
    ]
   },
   {
@@ -501,7 +511,7 @@
    ],
    "source": [
     "simulated_target_discharge = pd.DataFrame(\n",
-    "    {'simulation': target_discharge}, index=pd.to_datetime(time_range)\n",
+    "    {\"simulation\": target_discharge}, index=pd.to_datetime(time_range)\n",
     ")\n",
     "simulated_target_discharge.plot(figsize=(12, 8))"
    ]
@@ -547,14 +557,17 @@
     "lc = discharge.coords[\"longitude\"]\n",
     "la = discharge.coords[\"latitude\"]\n",
     "discharge_map = discharge.loc[\n",
-    "    dict(longitude=lc[(lc > -73) & (lc < -70)], latitude=la[(la > 42) & (la < 45)])].plot(robust=True, cmap='GnBu', figsize=(12, 8))\n",
-    "discharge_map.axes.scatter(target_longitude, target_latitude, s=250, c='r', marker='x', lw=2)"
+    "    dict(longitude=lc[(lc > -73) & (lc < -70)], latitude=la[(la > 42) & (la < 45)])\n",
+    "].plot(robust=True, cmap=\"GnBu\", figsize=(12, 8))\n",
+    "discharge_map.axes.scatter(\n",
+    "    target_longitude, target_latitude, s=250, c=\"r\", marker=\"x\", lw=2\n",
+    ")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
