--- a/docs/examples/pcrglobwb.ipynb
+++ b/docs/examples/pcrglobwb.ipynb
@@ -23,6 +23,7 @@
    "source": [
     "# This cell is only used to suppress some distracting output messages\n",
     "import warnings\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning)"
    ]
   },
@@ -33,13 +34,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ewatercycle.models\n",
-    "import ewatercycle.forcing\n",
-    "import ewatercycle.parameter_sets\n",
-    "\n",
     "# For a nicer plot\n",
     "import matplotlib.pyplot as plt\n",
-    "from cartopy import crs, feature as cfeature"
+    "from cartopy import crs\n",
+    "from cartopy import feature as cfeature\n",
+    "\n",
+    "import ewatercycle.forcing\n",
+    "import ewatercycle.models\n",
+    "import ewatercycle.parameter_sets"
    ]
   },
   {
@@ -109,7 +111,9 @@
     }
    ],
    "source": [
-    "parameter_set = ewatercycle.parameter_sets.get_parameter_set('pcrglobwb_rhinemeuse_30min')\n",
+    "parameter_set = ewatercycle.parameter_sets.get_parameter_set(\n",
+    "    \"pcrglobwb_rhinemeuse_30min\"\n",
+    ")\n",
     "print(parameter_set)"
    ]
   },
@@ -133,7 +137,7 @@
     "    directory=\"/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min\",\n",
     "    config=\"/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min/setup_natural_test.ini\",\n",
     "    target_model=\"pcrglobwb\",\n",
-    "    supported_model_versions={'setters'}\n",
+    "    supported_model_versions={\"setters\"},\n",
     ")"
    ]
   },
@@ -171,16 +175,17 @@
    ],
    "source": [
     "forcing = ewatercycle.forcing.load_foreign(\n",
-    "    target_model = \"pcrglobwb\",\n",
-    "    start_time = \"2001-01-01T00:00:00Z\",\n",
-    "    end_time = \"2010-12-31T00:00:00Z\",\n",
-    "    directory = \"./parameter-sets/pcrglobwb_rhinemeuse_30min/forcing\",\n",
-    "    shape = None,  # if available, it can be used e.g. for plotting\n",
-    "    forcing_info = dict( \n",
+    "    target_model=\"pcrglobwb\",\n",
+    "    start_time=\"2001-01-01T00:00:00Z\",\n",
+    "    end_time=\"2010-12-31T00:00:00Z\",\n",
+    "    directory=\"./parameter-sets/pcrglobwb_rhinemeuse_30min/forcing\",\n",
+    "    shape=None,  # if available, it can be used e.g. for plotting\n",
+    "    forcing_info=dict(\n",
     "        # model-specific options\n",
-    "        precipitationNC = \"precipitation_2001to2010.nc\",\n",
-    "        temperatureNC = \"temperature_2001to2010.nc\"\n",
-    "))\n",
+    "        precipitationNC=\"precipitation_2001to2010.nc\",\n",
+    "        temperatureNC=\"temperature_2001to2010.nc\",\n",
+    "    ),\n",
+    ")\n",
     "print(forcing)"
    ]
   },
@@ -251,7 +256,9 @@
     }
    ],
    "source": [
-    "pcrglob = ewatercycle.models.PCRGlobWB(version=\"setters\", parameter_set=parameter_set, forcing=forcing)\n",
+    "pcrglob = ewatercycle.models.PCRGlobWB(\n",
+    "    version=\"setters\", parameter_set=parameter_set, forcing=forcing\n",
+    ")\n",
     "print(pcrglob)"
    ]
   },
@@ -321,7 +328,9 @@
     }
    ],
    "source": [
-    "cfg_file, cfg_dir = pcrglob.setup(end_time='2001-02-28T00:00:00Z', max_spinups_in_years=5)\n",
+    "cfg_file, cfg_dir = pcrglob.setup(\n",
+    "    end_time=\"2001-02-28T00:00:00Z\", max_spinups_in_years=5\n",
+    ")\n",
     "cfg_file, cfg_dir"
    ]
   },
@@ -844,7 +853,7 @@
    ],
    "source": [
     "da = pcrglob.get_value_as_xarray(\"discharge\")\n",
-    "da.thin(5) # only show every 5th value in each dim"
+    "da.thin(5)  # only show every 5th value in each dim"
    ]
   },
   {
@@ -887,17 +896,17 @@
    "source": [
     "fig = plt.figure(dpi=120)\n",
     "ax = fig.add_subplot(111, projection=crs.PlateCarree())\n",
-    "da.plot(ax=ax, cmap='GnBu')\n",
+    "da.plot(ax=ax, cmap=\"GnBu\")\n",
     "\n",
     "# Overlay ocean and coastines\n",
     "ax.add_feature(cfeature.OCEAN)\n",
-    "ax.add_feature(cfeature.RIVERS, color='k')\n",
+    "ax.add_feature(cfeature.RIVERS, color=\"k\")\n",
     "ax.coastlines()\n",
     "\n",
     "# Add some verification points\n",
     "target_longitudes = [7.8, 10.2, 11]\n",
     "target_latitudes = [50.3, 49.8, 47]\n",
-    "ax.scatter(target_longitudes, target_latitudes, s=250, c='r', marker='x', lw=2)"
+    "ax.scatter(target_longitudes, target_latitudes, s=250, c=\"r\", marker=\"x\", lw=2)"
    ]
   },
   {
@@ -926,7 +935,7 @@
     }
    ],
    "source": [
-    "pcrglob.get_value_at_coords('discharge', lon=target_longitudes, lat=target_latitudes)"
+    "pcrglob.get_value_at_coords(\"discharge\", lon=target_longitudes, lat=target_latitudes)"
    ]
   },
   {
