--- a/docs/examples/wflow.ipynb
+++ b/docs/examples/wflow.ipynb
@@ -19,14 +19,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
     "import logging\n",
-    "logging.basicConfig(level=logging.WARN)\n",
+    "import warnings\n",
     "\n",
     "import ewatercycle.forcing\n",
     "import ewatercycle.models\n",
-    "import ewatercycle.parameter_sets"
+    "import ewatercycle.parameter_sets\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
+    "logging.basicConfig(level=logging.WARN)"
    ]
   },
   {
@@ -61,7 +62,7 @@
     }
    ],
    "source": [
-    "parameter_set = ewatercycle.parameter_sets.get_parameter_set('wflow_rhine_sbm_nc')\n",
+    "parameter_set = ewatercycle.parameter_sets.get_parameter_set(\"wflow_rhine_sbm_nc\")\n",
     "print(parameter_set)"
    ]
   },
@@ -92,17 +93,17 @@
    ],
    "source": [
     "forcing = ewatercycle.forcing.load_foreign(\n",
-    "    directory = parameter_set.directory,\n",
-    "    target_model = parameter_set.target_model,\n",
-    "    start_time = '1991-01-01T00:00:00Z',\n",
-    "    end_time = '1991-12-31T00:00:00Z',\n",
-    "    forcing_info = dict(\n",
+    "    directory=parameter_set.directory,\n",
+    "    target_model=parameter_set.target_model,\n",
+    "    start_time=\"1991-01-01T00:00:00Z\",\n",
+    "    end_time=\"1991-12-31T00:00:00Z\",\n",
+    "    forcing_info=dict(\n",
     "        # Additional information about the external forcing data needed for the model configuration\n",
-    "        netcdfinput = \"inmaps.nc\",\n",
-    "        Precipitation = \"/P\",\n",
-    "        EvapoTranspiration = \"/PET\",\n",
-    "        Temperature = \"/TEMP\"\n",
-    "    )\n",
+    "        netcdfinput=\"inmaps.nc\",\n",
+    "        Precipitation=\"/P\",\n",
+    "        EvapoTranspiration=\"/PET\",\n",
+    "        Temperature=\"/TEMP\",\n",
+    "    ),\n",
     ")\n",
     "print(forcing)"
    ]
@@ -152,7 +153,9 @@
     }
    ],
    "source": [
-    "model = ewatercycle.models.Wflow(version='2020.1.1', parameter_set=parameter_set, forcing=forcing)"
+    "model = ewatercycle.models.Wflow(\n",
+    "    version=\"2020.1.1\", parameter_set=parameter_set, forcing=forcing\n",
+    ")"
    ]
   },
   {
@@ -900,13 +903,13 @@
     }
    ],
    "source": [
-    "qm = da.plot(robust=True, cmap='GnBu', figsize=(10, 8))\n",
+    "qm = da.plot(robust=True, cmap=\"GnBu\", figsize=(10, 8))\n",
     "\n",
     "# Add some verification points\n",
     "target_longitudes = [8.4, 10, 11]\n",
     "target_latitudes = [50, 50.15, 49]\n",
     "# Add some crosses to check that 'get_value_at_coords' works correctly below\n",
-    "qm.axes.scatter(target_longitudes, target_latitudes, s=250, c='r', marker='x', lw=2)"
+    "qm.axes.scatter(target_longitudes, target_latitudes, s=250, c=\"r\", marker=\"x\", lw=2)"
    ]
   },
   {
@@ -935,7 +938,7 @@
     }
    ],
    "source": [
-    "model.get_value_at_coords('RiverRunoff', lon=target_longitudes, lat=target_latitudes)"
+    "model.get_value_at_coords(\"RiverRunoff\", lon=target_longitudes, lat=target_latitudes)"
    ]
   },
   {
@@ -973,7 +976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
