--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -8,10 +8,11 @@
    "outputs": [],
    "source": [
     "# Suppress distracting outputs in these examples\n",
-    "import warnings\n",
     "import logging\n",
+    "import warnings\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
-    "logger = logging.getLogger('esmvalcore')\n",
+    "logger = logging.getLogger(\"esmvalcore\")\n",
     "logger.setLevel(logging.WARNING)"
    ]
   },
@@ -85,6 +86,7 @@
    ],
    "source": [
     "from ewatercycle import CFG\n",
+    "\n",
     "CFG"
    ]
   },
@@ -175,7 +177,7 @@
     }
    ],
    "source": [
-    "ewatercycle.parameter_sets.available_parameter_sets(target_model='wflow')"
+    "ewatercycle.parameter_sets.available_parameter_sets(target_model=\"wflow\")"
    ]
   },
   {
@@ -208,7 +210,7 @@
     }
    ],
    "source": [
-    "parameter_set = ewatercycle.parameter_sets.get_parameter_set('wflow_rhine_sbm_nc')\n",
+    "parameter_set = ewatercycle.parameter_sets.get_parameter_set(\"wflow_rhine_sbm_nc\")\n",
     "print(parameter_set)"
    ]
   },
@@ -262,7 +264,7 @@
     "    config=\"~/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min/setup_natural_test.ini\",\n",
     "    target_model=\"pcrglobwb\",\n",
     "    doi=\"https://doi.org/10.5281/zenodo.1045339\",\n",
-    "    supported_model_versions={'setters'}\n",
+    "    supported_model_versions={\"setters\"},\n",
     ")"
    ]
   },
@@ -335,18 +337,18 @@
    ],
    "source": [
     "forcing = ewatercycle.forcing.load_foreign(\n",
-    "    directory = parameter_set.directory,\n",
-    "    target_model = \"wflow\",\n",
-    "    start_time = '1991-01-01T00:00:00Z',\n",
-    "    end_time = '1991-12-31T00:00:00Z',\n",
-    "    shape = None,\n",
-    "    forcing_info = dict(\n",
+    "    directory=parameter_set.directory,\n",
+    "    target_model=\"wflow\",\n",
+    "    start_time=\"1991-01-01T00:00:00Z\",\n",
+    "    end_time=\"1991-12-31T00:00:00Z\",\n",
+    "    shape=None,\n",
+    "    forcing_info=dict(\n",
     "        # Additional information about the external forcing data needed for the model configuration\n",
-    "        netcdfinput = \"inmaps.nc\",\n",
-    "        Precipitation = \"/P\",\n",
-    "        EvapoTranspiration = \"/PET\",\n",
-    "        Temperature = \"/TEMP\"\n",
-    "    )\n",
+    "        netcdfinput=\"inmaps.nc\",\n",
+    "        Precipitation=\"/P\",\n",
+    "        EvapoTranspiration=\"/PET\",\n",
+    "        Temperature=\"/TEMP\",\n",
+    "    ),\n",
     ")\n",
     "print(forcing)"
    ]
@@ -414,14 +416,14 @@
    ],
    "source": [
     "forcing = ewatercycle.forcing.generate(\n",
-    "    target_model='wflow', \n",
-    "    dataset='ERA5',\n",
+    "    target_model=\"wflow\",\n",
+    "    dataset=\"ERA5\",\n",
     "    start_time=\"1990-01-01T00:00:00Z\",\n",
     "    end_time=\"1990-01-31T00:00:00Z\",\n",
-    "    shape='~/GitHub/ewatercycle/docs/examples/data/Rhine/Rhine.shp',\n",
-    "    model_specific_options = {\n",
-    "        'dem_file' : '/scratch-shared/ewatercycle/user_guide/wflow_rhine_sbm_nc/staticmaps/wflow_dem.map',\n",
-    "    }\n",
+    "    shape=\"~/GitHub/ewatercycle/docs/examples/data/Rhine/Rhine.shp\",\n",
+    "    model_specific_options={\n",
+    "        \"dem_file\": \"/scratch-shared/ewatercycle/user_guide/wflow_rhine_sbm_nc/staticmaps/wflow_dem.map\",\n",
+    "    },\n",
     ")\n",
     "print(forcing)"
    ]
@@ -466,7 +468,7 @@
    "outputs": [],
    "source": [
     "reloaded_forcing = ewatercycle.forcing.load(\n",
-    "    directory='/scratch/shared/ewatercycle/user_guide/recipe_wflow_20210720_122543/work/wflow_daily/script'\n",
+    "    directory=\"/scratch/shared/ewatercycle/user_guide/recipe_wflow_20210720_122543/work/wflow_daily/script\"\n",
     ")"
    ]
   },
@@ -569,7 +571,9 @@
     }
    ],
    "source": [
-    "model_instance = ewatercycle.models.Wflow(version='2020.1.1', parameter_set=parameter_set, forcing=forcing)"
+    "model_instance = ewatercycle.models.Wflow(\n",
+    "    version=\"2020.1.1\", parameter_set=parameter_set, forcing=forcing\n",
+    ")"
    ]
   },
   {
@@ -620,9 +624,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg_file, cfg_dir = model_instance.setup(\n",
-    "    end_time=\"1990-12-15T00:00:00Z\"\n",
-    ")"
+    "cfg_file, cfg_dir = model_instance.setup(end_time=\"1990-12-15T00:00:00Z\")"
    ]
   },
   {
@@ -722,13 +724,17 @@
     "output = []\n",
     "while model_instance.time < model_instance.end_time:\n",
     "    model_instance.update()\n",
-    "    \n",
-    "    discharge = model_instance.get_value_at_coords('RiverRunoff', lon=[grdc_longitude], lat=[grdc_latitude])[0]\n",
+    "\n",
+    "    discharge = model_instance.get_value_at_coords(\n",
+    "        \"RiverRunoff\", lon=[grdc_longitude], lat=[grdc_latitude]\n",
+    "    )[0]\n",
     "    output.append(discharge)\n",
-    "    \n",
+    "\n",
     "    # Here you could do whatever you like, e.g. update soil moisture values before doing the next timestep.\n",
-    "    \n",
-    "    print(model_instance.time_as_isostr, end=\"\\r\")  # \"\\r\" clears the output before printing the next timestamp"
+    "\n",
+    "    print(\n",
+    "        model_instance.time_as_isostr, end=\"\\r\"\n",
+    "    )  # \"\\r\" clears the output before printing the next timestamp"
    ]
   },
   {
@@ -769,7 +775,7 @@
     }
    ],
    "source": [
-    "model_instance.get_value_as_xarray('RiverRunoff').plot()"
+    "model_instance.get_value_as_xarray(\"RiverRunoff\").plot()"
    ]
   },
   {
@@ -928,8 +934,8 @@
     "\n",
     "observations, metadata = ewatercycle.observation.grdc.get_grdc_data(\n",
     "    station_id=grdc_station_id,\n",
-    "    start_time=\"1990-01-01T00:00:00Z\", # model_instance.start_time_as_isostr\n",
-    "    end_time=\"1990-12-15T00:00:00Z\"\n",
+    "    start_time=\"1990-01-01T00:00:00Z\",  # model_instance.start_time_as_isostr\n",
+    "    end_time=\"1990-12-15T00:00:00Z\",\n",
     ")\n",
     "\n",
     "observations.head()"
@@ -997,7 +1003,7 @@
    "outputs": [],
    "source": [
     "combined_discharge = observations.rename(columns={\"streamflow\": \"GRDC\"})\n",
-    "combined_discharge['wflow'] = output"
+    "combined_discharge[\"wflow\"] = output"
    ]
   },
   {
@@ -1034,7 +1040,7 @@
    "source": [
     "ewatercycle.analysis.hydrograph(\n",
     "    discharge=combined_discharge,\n",
-    "    reference='GRDC',\n",
+    "    reference=\"GRDC\",\n",
     ")"
    ]
   }
