--- a/docs/examples/generate_forcing.ipynb
+++ b/docs/examples/generate_forcing.ipynb
@@ -22,16 +22,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
-    "\n",
     "import logging\n",
-    "logger = logging.getLogger('esmvalcore')\n",
-    "logger.setLevel(logging.WARNING)\n",
+    "import warnings\n",
     "\n",
     "import xarray as xr\n",
     "\n",
-    "import ewatercycle.forcing"
+    "import ewatercycle.forcing\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
+    "\n",
+    "logger = logging.getLogger(\"esmvalcore\")\n",
+    "logger.setLevel(logging.WARNING)"
    ]
   },
   {
@@ -86,14 +87,14 @@
    ],
    "source": [
     "wflow_forcing = ewatercycle.forcing.generate(\n",
-    "    target_model='wflow', \n",
-    "    dataset='ERA5',  \n",
-    "    start_time='1990-01-01T00:00:00Z', \n",
-    "    end_time='1990-12-31T00:00:00Z',    \n",
-    "    shape='./data/Rhine/Rhine.shp',\n",
+    "    target_model=\"wflow\",\n",
+    "    dataset=\"ERA5\",\n",
+    "    start_time=\"1990-01-01T00:00:00Z\",\n",
+    "    end_time=\"1990-12-31T00:00:00Z\",\n",
+    "    shape=\"./data/Rhine/Rhine.shp\",\n",
     "    model_specific_options={\n",
-    "        'dem_file':'./wflow_rhine_sbm_nc/staticmaps/wflow_dem.map',\n",
-    "    }\n",
+    "        \"dem_file\": \"./wflow_rhine_sbm_nc/staticmaps/wflow_dem.map\",\n",
+    "    },\n",
     ")"
    ]
   },
@@ -253,14 +254,14 @@
    ],
    "source": [
     "pcrglobwb_forcing = ewatercycle.forcing.generate(\n",
-    "    target_model='pcrglobwb', \n",
-    "    dataset='ERA5',  \n",
-    "    start_time='1990-01-01T00:00:00Z', \n",
-    "    end_time='1990-12-31T00:00:00Z', \n",
-    "    shape='./data/Rhine/Rhine.shp',\n",
+    "    target_model=\"pcrglobwb\",\n",
+    "    dataset=\"ERA5\",\n",
+    "    start_time=\"1990-01-01T00:00:00Z\",\n",
+    "    end_time=\"1990-12-31T00:00:00Z\",\n",
+    "    shape=\"./data/Rhine/Rhine.shp\",\n",
     "    model_specific_options={\n",
-    "        'start_time_climatology':'1990-01-01T00:00:00Z',\n",
-    "        'end_time_climatology':'1990-01-01T00:00:00Z',\n",
+    "        \"start_time_climatology\": \"1990-01-01T00:00:00Z\",\n",
+    "        \"end_time_climatology\": \"1990-01-01T00:00:00Z\",\n",
     "    },\n",
     ")"
    ]
@@ -429,11 +430,11 @@
    ],
    "source": [
     "lisflood_forcing = ewatercycle.forcing.generate(\n",
-    "    target_model='lisflood', \n",
-    "    dataset='ERA5', \n",
-    "    start_time='1990-01-01T00:00:00Z',\n",
-    "    end_time='1990-12-31T00:00:00Z', \n",
-    "    shape='./data/Rhine/Rhine.shp',\n",
+    "    target_model=\"lisflood\",\n",
+    "    dataset=\"ERA5\",\n",
+    "    start_time=\"1990-01-01T00:00:00Z\",\n",
+    "    end_time=\"1990-12-31T00:00:00Z\",\n",
+    "    shape=\"./data/Rhine/Rhine.shp\",\n",
     ")"
    ]
   },
