Polish some comments

--- a/docs/examples/Irrigation.ipynb
+++ b/docs/examples/Irrigation.ipynb
@@ -32,7 +32,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# These packages are not strictly necessary. We'll use them to provide some insight into the steps that we're taking.\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from cartopy import crs\n",
@@ -135,8 +134,19 @@
     "    version=\"setters\", parameter_set=merrimack_parameterset\n",
     ")\n",
     "\n",
-    "# Create experiment folder, set up the model configuration, and start the container in which the model will run\n",
+    "# Create experiment folder, set up the model configuration, \n",
+    "# and start the container in which the model will run\n",
     "reference_config, reference_dir = reference.setup()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4568ff3a-705e-46fb-bca0-8ace3a7308e3",
+   "metadata": {},
+   "source": [
+    "Initialize the model inside the container.\n",
+    "Depending on your system this may take a few minutes, \n",
+    "log messages will start to appear in the output directory\n"
    ]
   },
   {
@@ -146,8 +156,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the model inside the container\n",
-    "# Depending on your system this may take a few minutes, log messages will start to appear in the output directory\n",
     "reference.initialize(reference_config)"
    ]
   },
