--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -934,7 +934,7 @@
     "\n",
     "observations, metadata = ewatercycle.observation.grdc.get_grdc_data(\n",
     "    station_id=grdc_station_id,\n",
-    "    start_time=\"1990-01-01T00:00:00Z\",  # model_instance.start_time_as_isostr\n",
+    "    start_time=\"1990-01-01T00:00:00Z\",  # or: model_instance.start_time_as_isostr\n",
     "    end_time=\"1990-12-15T00:00:00Z\",\n",
     ")\n",
     "\n",
