Split import cell so that warnings and loggers are separated

--- a/docs/examples/MarrmotM01.ipynb
+++ b/docs/examples/MarrmotM01.ipynb
@@ -21,18 +21,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a72501c-8a4a-4570-b9bc-39c52dd7e039",
+   "id": "de23e838-d779-4dad-a2e8-8707ef64f17d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
     "\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ec98d58f-b46f-48c3-a834-7232e4694747",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "\n",
     "import ewatercycle.forcing\n",
-    "import ewatercycle.models\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning)"
+    "import ewatercycle.models"
    ]
   },
   {
