--- a/docs/examples/MarrmotM14.ipynb
+++ b/docs/examples/MarrmotM14.ipynb
@@ -21,18 +21,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a07ee36-bf51-46ab-bc5b-bffd6255d3ec",
+   "id": "eb98161f-337b-4db9-a174-74b47454da08",
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
     "\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "74e31edd-2caa-4c1c-bd93-779b2a353c2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "\n",
     "import ewatercycle.forcing\n",
-    "import ewatercycle.models\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning)"
+    "import ewatercycle.models"
    ]
   },
   {
