--- a/docs/examples/lisflood.ipynb
+++ b/docs/examples/lisflood.ipynb
@@ -21,23 +21,31 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fc9d38ab-dd5a-412f-9b0c-b8fdd65066f2",
+   "id": "20d65b1f-0ddd-45d7-be97-e73635b8e736",
    "metadata": {},
    "outputs": [],
    "source": [
     "import logging\n",
     "import warnings\n",
     "\n",
-    "import pandas as pd\n",
-    "\n",
-    "import ewatercycle.forcing\n",
-    "import ewatercycle.models\n",
-    "import ewatercycle.parameter_sets\n",
-    "\n",
     "logger = logging.getLogger(\"grpc4bmi\")\n",
     "logger.setLevel(logging.WARNING)\n",
     "\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b973913f-9472-4c00-bc4b-a170e42710ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "import ewatercycle.forcing\n",
+    "import ewatercycle.models\n",
+    "import ewatercycle.parameter_sets"
    ]
   },
   {
