--- a/docs/examples/wflow.ipynb
+++ b/docs/examples/wflow.ipynb
@@ -15,19 +15,27 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b425dfa7",
+   "id": "7963a505-4183-4551-b158-5b7ae2033c2b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import logging\n",
     "import warnings\n",
     "\n",
-    "import ewatercycle.forcing\n",
-    "import ewatercycle.models\n",
-    "import ewatercycle.parameter_sets\n",
-    "\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
     "logging.basicConfig(level=logging.WARN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "36bca5f6-d6ee-4b64-9ddd-8db252e49622",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ewatercycle.forcing\n",
+    "import ewatercycle.models\n",
+    "import ewatercycle.parameter_sets"
    ]
   },
   {
