--- a/docs/examples/generate_forcing.ipynb
+++ b/docs/examples/generate_forcing.ipynb
@@ -18,21 +18,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import logging\n",
     "import warnings\n",
     "\n",
-    "import xarray as xr\n",
-    "\n",
-    "import ewatercycle.forcing\n",
-    "\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
     "\n",
     "logger = logging.getLogger(\"esmvalcore\")\n",
     "logger.setLevel(logging.WARNING)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xarray as xr\n",
+    "\n",
+    "import ewatercycle.forcing"
    ]
   },
   {
