comment on seperate line

--- a/docs/examples/Irrigation.ipynb
+++ b/docs/examples/Irrigation.ipynb
@@ -134,7 +134,7 @@
     "    version=\"setters\", parameter_set=merrimack_parameterset\n",
     ")\n",
     "\n",
-    "# Create experiment folder, set up the model configuration, \n",
+    "# Create experiment folder, set up the model configuration,\n",
     "# and start the container in which the model will run\n",
     "reference_config, reference_dir = reference.setup()"
    ]
@@ -583,9 +583,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment.initialize(\n",
-    "    experiment_config\n",
-    ")  # this may take a few minutes, log messages will start to appear in the output directory."
+    "experiment.initialize(experiment_config)\n",
+    "# this may take a few minutes, log messages will start to appear in the output directory."
    ]
   },
   {
